--- a/EFI/OC/Kexts/CPUFriend.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/CPUFriend.kext/Contents/Info.plist
@@ -3,27 +3,29 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20B29</string>
+	<string>19H1217</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>AMDRyzenCPUPowerManagement</string>
+	<string>CPUFriend</string>
 	<key>CFBundleIdentifier</key>
-	<string>wtf.spinach.AMDRyzenCPUPowerManagement</string>
+	<string>org.vanilla.driver.CPUFriend</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>AMDRyzenCPUPowerManagement</string>
+	<string>CPUFriend</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.6.6</string>
+	<string>1.2.4</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.6.6</string>
+	<string>1.2.4</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,43 +44,50 @@
 	<string>12B45b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>wtf.spinach.AMDRyzenCPUPowerManagement</key>
+		<key>CPUFriend</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>wtf.spinach.AMDRyzenCPUPowerManagement</string>
+			<string>org.vanilla.driver.CPUFriend</string>
 			<key>IOClass</key>
-			<string>AMDRyzenCPUPowerManagement</string>
+			<string>CPUFriend</string>
 			<key>IOMatchCategory</key>
-			<string>AMDRyzenCPUPowerManagement</string>
-			<key>IONameMatch</key>
-			<string>processor</string>
+			<string>CPUFriend</string>
+			<key>IOProviderClass</key>
+			<string>IOResources</string>
+			<key>IOResourceMatch</key>
+			<string>IOKit</string>
+		</dict>
+		<key>CPUFriendPlatform</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>org.vanilla.driver.CPUFriend</string>
+			<key>IOClass</key>
+			<string>CPUFriendData</string>
+			<key>IOProbeScore</key>
+			<integer>6000</integer>
 			<key>IOPropertyMatch</key>
 			<dict>
-				<key>processor-index</key>
+				<key>IOCPUNumber</key>
 				<integer>0</integer>
 			</dict>
 			<key>IOProviderClass</key>
-			<string>IOACPIPlatformDevice</string>
+			<string>AppleACPICPU</string>
 			<key>IOResourceMatch</key>
 			<string>ACPI</string>
-			<key>IOUserClientClass</key>
-			<string>AMDRyzenCPUPMUserClient</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.13</string>
+	<string>10.8</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2020 trulyspinach. All rights reserved.</string>
+	<string>Copyright © 2017 - 2019 PMheart. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
-	<string>0.6</string>
+	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.3.9</string>
-		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>2.9</string>
-		<key>com.apple.kec.Libm</key>
-		<string>1.0</string>
+		<string>1.2.0</string>
+		<key>com.apple.iokit.IOACPIFamily</key>
+		<string>1.0.0d1</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
